--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.mssql-jdbc-12.8.1.jre11.jar=C:\\Users\\Joshua\\Downloads\\mssql-jdbc-12.8.1.jre11.jar
+file.reference.mssql-jdbc-12.8.1.jre11.jar=C:\\Users\\contr\\Downloads\\sqljdbc_12.8.1.0_enu\\sqljdbc_12.8\\enu\\jars\\mssql-jdbc-12.8.1.jre11.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
