--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ file.reference.mssql-jdbc-12.8.1.jre11.jar=C:\\Users\\contr\\Downloads\\sqljdbc_
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Joshua\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=C:\\Users\\contr\\AppData\\Roaming\\NetBeans\\22\\build.properties
