--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/App_Cine
 endorsed.classpath=
 excludes=
 file.reference.mssql-jdbc-12.8.1.jre11.jar=C:\\Users\\contr\\Downloads\\sqljdbc_12.8.1.0_enu\\sqljdbc_12.8\\enu\\jars\\mssql-jdbc-12.8.1.jre11.jar
+file.reference.mssql-jdbc-12.8.1.jre11.jar-1=C:\\Users\\melin\\OneDrive\\Escritorio\\mssql-jdbc-12.8.1.jre11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-12.8.1.jre11.jar}
+    ${file.reference.mssql-jdbc-12.8.1.jre11.jar}:\
+    ${file.reference.mssql-jdbc-12.8.1.jre11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=App_Cine
-main.class=presentacion.Test_ReporteVentaSnack
+main.class=presentacion.test_Conexion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
