--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -7,4 +7,4 @@ file.reference.mssql-jdbc-12.8.1.jre11.jar-1=C:\\Users\\contr\\Downloads\\sqljdb
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\melin\\AppData\\Roaming\\NetBeans\\20\\build.properties
+user.properties.file=C:\\Users\\contr\\AppData\\Roaming\\NetBeans\\22\\build.properties
