--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/App_Cine
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\contr\\OneDrive\\Escritorio\\Downloads\\lib\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-12.8.1.jre11.jar=C:\\Users\\contr\\Downloads\\sqljdbc_12.8.1.0_enu\\sqljdbc_12.8\\enu\\jars\\mssql-jdbc-12.8.1.jre11.jar
 file.reference.mssql-jdbc-12.8.1.jre11.jar-1=C:\\Users\\melin\\OneDrive\\Escritorio\\mssql-jdbc-12.8.1.jre11.jar
 includes=**
@@ -42,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-12.8.1.jre11.jar}:\
     ${file.reference.mssql-jdbc-12.8.1.jre11.jar-1}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
