--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,16 +35,22 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/App_Cine
 endorsed.classpath=
 excludes=
+file.reference.itext-pdfa-5.5.13.1.jar=C:\\Users\\melin\\OneDrive\\Escritorio\\itext-pdfa-5.5.13.1.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\contr\\OneDrive\\Escritorio\\Downloads\\lib\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-12.8.1.jre11.jar=C:\\Users\\contr\\Downloads\\sqljdbc_12.8.1.0_enu\\sqljdbc_12.8\\enu\\jars\\mssql-jdbc-12.8.1.jre11.jar
 file.reference.mssql-jdbc-12.8.1.jre11.jar-1=C:\\Users\\melin\\OneDrive\\Escritorio\\mssql-jdbc-12.8.1.jre11.jar
+file.reference.poi-5.2.3.jar=C:\\Users\\melin\\OneDrive\\Escritorio\\poi-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar=C:\\Users\\melin\\OneDrive\\Escritorio\\poi-ooxml-5.2.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-12.8.1.jre11.jar}:\
     ${file.reference.mssql-jdbc-12.8.1.jre11.jar-1}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.itext-pdfa-5.5.13.1.jar}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}:\
+    ${file.reference.poi-5.2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
